oneAPI working one not

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script type="module" src="script.js"></script>
   </head>
 
-  <body class="light">
+  <body class="dark">
     <header id="top" class="header">
       <img id="sunIcon" src="images/sun.png" alt="Sun Icon" />
       <p class="headerLogo">JH</p>
@@ -21,16 +21,16 @@
           alt="Hamburger Icon"
         />
         <ul id="navList" class="hidden">
-          <li>Nav 1</li>
-          <li>Nav 2</li>
-          <li>Nav 3</li>
+          <li>Axolotl</li>
+          <li>Axolotl</li>
+          <li>Contact info</li>
         </ul>
       </nav>
     </header>
 
     <main>
       <section class="section">
-        <!-- Hero section / Home section / Main secton -->
+        <!-- API fetch-->
       </section>
     </main>
 
