--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
           alt="Hamburger Icon"
         />
         <ul id="navList" class="hidden">
-          <li>Axolotl</li>
-          <li>Axolotl</li>
+          <li>Fox</li>
+          <li>Fox Facts</li>
           <li>Contact info</li>
         </ul>
       </nav>
@@ -31,6 +31,11 @@
     <main>
       <section class="section">
         <!-- API fetch-->
+      </section>
+
+      <section>
+        <H2>Fox Facts!</H2>
+        
       </section>
     </main>
 
