change background color of header and footer

--- a/index.html
+++ b/index.html
@@ -35,16 +35,13 @@
 
       <section>
         <H2>Fox Facts!</H2>
-        
+
       </section>
     </main>
 
     <footer class="footer">
-      <h3>Laget av Julie Hauge</h3>
+      <h3>Laget av Eirin</h3>
       <p>Finn meg på <a href="">github</a></p>
-      <a href="#top">
-        <img class="arrowIcon" src="images/downArrow.png" alt="Arrow Up Icon" />
-      </a>
     </footer>
   </body>
 </html>
