--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
   <body class="dark">
     <header id="top" class="header">
-      <img id="sunIcon" src="images/sun.png" alt="Sun Icon" />
-      <p class="headerLogo">JH</p>
+      <img id="foxIcon" src="images/foxIcon.png" alt="Fox Icon" />
+      <p class="headerLogo">FOXES!</p>
       <nav class="headerNav">
         <img
           id="hamburgerIcon"
@@ -33,7 +33,7 @@
         <!-- API fetch-->
       </section>
 
-      <section>
+      <section class="sectionNinteen">
         <H2>Fox Facts!</H2>
 
       </section>
@@ -41,7 +41,7 @@
 
     <footer class="footer">
       <h3>Laget av Eirin</h3>
-      <p>Finn meg på <a href="">github</a></p>
+      <p>Finn meg på <a href="https://github.com/eirinedvinsen">github</a></p>
     </footer>
   </body>
 </html>
