starting on API

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <body class="dark">
     <header id="top" class="header">
-      <img id="foxIcon" src="images/foxIcon.png" alt="Fox Icon" />
+      <img id="foxIcon" class="headerIcon" src="images/foxIcon.png" alt="Fox Icon" />
       <p class="headerLogo">FOXES!</p>
       <nav class="headerNav">
         <img
@@ -31,10 +31,20 @@
     <main>
       <section class="section">
         <!-- API fetch-->
+        <div id="randomFoxes"> <!--Data fra JS--></div>
       </section>
 
       <section class="sectionNinteen">
         <H2>Fox Facts!</H2>
+        <div>
+          <ul>
+            <li>Foxes don’t hibernate, and aren’t bothered by the cold.</li>
+            <li>Foxes sleep in dens up to 8 ft deep.</li>
+            <li> Foxes can make over 40 different vocalizations. To put it into perspective, humans have 3 and 1/3 octaves. Foxes have five octaves that allow them to produce 40 different vocalizations.</li>
+            <li>The species name for red foxes is Vulpes vulpes</li>
+            <li>A group of foxes is called a Skulk.</li>
+          </ul>
+        </div>
 
       </section>
     </main>
