--- a/index.html
+++ b/index.html
@@ -32,12 +32,13 @@
     <main>
       <section class="section">
         <!-- API fetch-->
+        <h1>Daily Fox!</h1>
         <div id="randomFoxes"> <!--Data fra JS--></div>
       </section>
 
-      <section class="sectionNinteen">
+      <section>
         <H2>Fox Facts!</H2>
-        <div>
+        <div class="sectionNinteen">
           <ul>
             <li>Foxes don’t hibernate, and aren’t bothered by the cold.</li>
             <li>Foxes sleep in dens up to 8 ft deep.</li>
