Adding functioning API

--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
     </header>
 
     <main>
-      <section class="section">
+      <section>
         <!-- API fetch-->
-        <h1>Daily Fox!</h1>
-        <div id="randomFoxes"> <!--Data fra JS--></div>
+        <h1>Random Fox!</h1>
+        <div class="sectionNInteen"><img id="foxImage" class="img" src="" alt="Random Fox"></div>
       </section>
 
       <section>
