trying to fix flex

--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
     <main>
       <section>
         <!-- API fetch-->
-        <h1>Random Fox!</h1>
-        <div class="sectionNInteen"><img id="foxImage" class="img" src="" alt="Random Fox"></div>
+        <h1 id="randomFox">Random Fox!</h1>
+        <div class="sectionNinteen"><img id="foxImage" class="img" src="" alt="Random Fox"></div>
       </section>
 
       <section>
-        <H2>Fox Facts!</H2>
+        <H2 id="foxFacts">Fox Facts!</H2>
         <div class="sectionNinteen">
           <ul>
             <li>Foxes don’t hibernate, and aren’t bothered by the cold.</li>
