Fix display flex

--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
       <section>
         <!-- API fetch-->
         <h1 id="randomFox">Random Fox!</h1>
-        <div class="sectionNinteen"><img id="foxImage" class="img" src="" alt="Random Fox"></div>
+        <div class="sectionNineteen"><img id="foxImage" class="img" src="" alt="Random Fox"></div>
       </section>
 
       <section>
         <H2 id="foxFacts">Fox Facts!</H2>
-        <div class="sectionNinteen">
+        <div class="sectionNineteen">
           <ul>
             <li>Foxes don’t hibernate, and aren’t bothered by the cold.</li>
             <li>Foxes sleep in dens up to 8 ft deep.</li>
