--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
           alt="Hamburger Icon"
         />
         <ul id="navList" class="hidden">
-          <li>Fox</li>
-          <li>Fox Facts</li>
-          <li>Contact info</li>
+          <li><a href="#randomFox">Fox</a></li>
+          <li><a href="#foxFacts">Fox Facts</a></li>
+          <li><a href="#contactInfo">Contact info</a></li>
         </ul>
       </nav>
     </header>
@@ -33,12 +33,12 @@
       <section>
         <!-- API fetch-->
         <h1 id="randomFox">Random Fox!</h1>
-        <div class="sectionNineteen"><img id="foxImage" class="img" src="" alt="Random Fox"></div>
+        <div class="sectionCenter , sectionImg" ><img id="foxImage" class="img" src="" alt="Random Fox"></div>
       </section>
 
       <section>
         <H2 id="foxFacts">Fox Facts!</H2>
-        <div class="sectionNineteen">
+        <div class="sectionCenter , sectionFacts">
           <ul>
             <li>Foxes don’t hibernate, and aren’t bothered by the cold.</li>
             <li>Foxes sleep in dens up to 8 ft deep.</li>
@@ -52,7 +52,7 @@
     </main>
 
     <footer class="footer">
-      <h3>Laget av Eirin</h3>
+      <h3 id="contactInfo">Laget av Eirin</h3>
       <p>Finn meg på <a href="https://github.com/eirinedvinsen">github</a></p>
     </footer>
   </body>
