--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <!-- API fetch-->
         <h1 id="randomFox">Random Fox!</h1>
         <div class="sectionCenter , sectionImg" ><img id="foxImage" class="img" src="" alt="Random Fox"></div>
+        <button id="refreshFox">Get a new Fox!</button>
       </section>
 
       <section>
