adding an error message

--- a/index.html
+++ b/index.html
@@ -33,8 +33,11 @@
       <section>
         <!-- API fetch-->
         <h1 id="randomFox">Random Fox!</h1>
-        <div class="sectionCenter , sectionImg" ><img id="foxImage" class="img" src="" alt="Random Fox"></div>
-        <button id="refreshFox">Get a new Fox!</button>
+        <div class="sectionCenter , sectionImg" >
+          <img id="foxImage" class="img" src="" alt="Random Fox">
+        </div>
+        <div class="sectionCenter"><button id="refreshFox">Get a new Fox!</button></div>
+        <div id="errorMessage"></div>
       </section>
 
       <section>
